--- a/Lecture_5.ipynb
+++ b/Lecture_5.ipynb
@@ -22,7 +22,7 @@
     "2. https://leetcode.com/problems/goal-parser-interpretation/\n",
     "3. https://leetcode.com/problems/check-if-two-string-arrays-are-equivalent/\n",
     "\n",
-    "HW 2:\n",
+    "HW2:\n",
     "1. https://leetcode.com/problems/maximum-product-of-three-numbers/\n",
     "2. https://leetcode.com/problems/richest-customer-wealth/\n",
     "3. https://leetcode.com/problems/shuffle-the-array/\n",
@@ -38,10 +38,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "element =  1 square_value =  1 [1]\n",
+      "element =  2 square_value =  4 [1, 4]\n",
+      "element =  3 square_value =  9 [1, 4, 9]\n",
+      "element =  4 square_value =  16 [1, 4, 9, 16]\n",
+      "element =  5 square_value =  25 [1, 4, 9, 16, 25]\n",
+      "element =  11 square_value =  121 [1, 4, 9, 16, 25, 121]\n",
+      "element =  12 square_value =  144 [1, 4, 9, 16, 25, 121, 144]\n",
+      "element =  13 square_value =  169 [1, 4, 9, 16, 25, 121, 144, 169]\n",
+      "element =  14 square_value =  196 [1, 4, 9, 16, 25, 121, 144, 169, 196]\n",
+      "element =  15 square_value =  225 [1, 4, 9, 16, 25, 121, 144, 169, 196, 225]\n",
+      "[1, 4, 9, 16, 25, 121, 144, 169, 196, 225]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4,5,11,12,13,14,15] #input\n",
+    "\n",
+    "square_list = []\n",
+    "\n",
+    "for element in nums:\n",
+    "    square_value = element*element\n",
+    "    square_list.append(square_value)\n",
+    "    print(\"element = \", element, \"square_value = \", square_value, square_list)\n",
+    "\n",
+    "print(square_list)\n",
+    "    \n",
+    "print(type(square_list))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,66 +84,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def multiply_numbers(a, b):\n",
+    "    \n",
+    "    total_sum = a*b\n",
+    "    \n",
+    "    return total_sum"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply_numbers(1,2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25000"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply_numbers(100,250)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.76"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply_numbers(1.2,2.3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def square_elements(input_list):\n",
+    "    \n",
+    "    square_list = []\n",
+    "\n",
+    "    for element in input_list:\n",
+    "        square_value = element*element\n",
+    "        square_list.append(square_value)\n",
+    "        print(\"element = \", element, \"square_value = \", square_value, square_list)\n",
+    "        \n",
+    "    return square_list"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "element =  1 square_value =  1 [1]\n",
+      "element =  2 square_value =  4 [1, 4]\n",
+      "element =  3 square_value =  9 [1, 4, 9]\n",
+      "element =  4 square_value =  16 [1, 4, 9, 16]\n",
+      "element =  5 square_value =  25 [1, 4, 9, 16, 25]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square_elements([1,2,3,4,5])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "element =  -1 square_value =  1 [1]\n",
+      "element =  2 square_value =  4 [1, 4]\n",
+      "element =  4 square_value =  16 [1, 4, 16]\n",
+      "element =  0 square_value =  0 [1, 4, 16, 0]\n",
+      "element =  100 square_value =  10000 [1, 4, 16, 0, 10000]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 16, 0, 10000]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square_elements([-1,2,4,0,100])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Even or odd: if-else condition checking"
+    "#### Even or odd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 even = True\n",
+      "1 even = False\n",
+      "2 even = True\n",
+      "3 even = False\n",
+      "4 even = True\n",
+      "5 even = False\n",
+      "6 even = True\n",
+      "7 even = False\n",
+      "8 even = True\n",
+      "9 even = False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,10):\n",
+    "    if i%2 == 0:\n",
+    "        print(i, \"even = True\")\n",
+    "    else:\n",
+    "        print(i, \"even = False\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,10 +281,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Hello Geek\n",
+      "1\n",
+      "Hello Geek\n",
+      "2\n",
+      "Hello Geek\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "while count < 3:   \n",
+    "    print(count)\n",
+    "    count = count + 1\n",
+    "    print(\"Hello Geek\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### example: if-else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 divisible by 2\n",
+      "0 divisible by 3\n",
+      "0 divisible by 4\n",
+      "0 divisible by 2 and 4\n",
+      "1 not divisible 2\n",
+      "1 not divisible 3\n",
+      "1 not divisible 4\n",
+      "1 not divisible 2 and 4\n",
+      "2 divisible by 2\n",
+      "2 not divisible 3\n",
+      "2 not divisible 4\n",
+      "2 not divisible 2 and 4\n",
+      "3 not divisible 2\n",
+      "3 divisible by 3\n",
+      "3 not divisible 4\n",
+      "3 not divisible 2 and 4\n",
+      "4 divisible by 2\n",
+      "4 not divisible 3\n",
+      "4 divisible by 4\n",
+      "4 divisible by 2 and 4\n",
+      "5 not divisible 2\n",
+      "5 not divisible 3\n",
+      "5 not divisible 4\n",
+      "5 not divisible 2 and 4\n",
+      "6 divisible by 2\n",
+      "6 divisible by 3\n",
+      "6 not divisible 4\n",
+      "6 not divisible 2 and 4\n",
+      "7 not divisible 2\n",
+      "7 not divisible 3\n",
+      "7 not divisible 4\n",
+      "7 not divisible 2 and 4\n",
+      "8 divisible by 2\n",
+      "8 not divisible 3\n",
+      "8 divisible by 4\n",
+      "8 divisible by 2 and 4\n",
+      "9 not divisible 2\n",
+      "9 divisible by 3\n",
+      "9 not divisible 4\n",
+      "9 not divisible 2 and 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,10,1):\n",
+    "    \n",
+    "    # 0,2,4,6,8\n",
+    "    if i%2 == 0:\n",
+    "        print(i, \"divisible by 2\")\n",
+    "    else:\n",
+    "        print(i, \"not divisible 2\")\n",
+    "        \n",
+    "    # 3,6,9\n",
+    "    if i%3 == 0:\n",
+    "        print(i, \"divisible by 3\")\n",
+    "    else:\n",
+    "        print(i, \"not divisible 3\")\n",
+    "        \n",
+    "    # 4, 8\n",
+    "    if i%4 == 0:\n",
+    "        print(i, \"divisible by 4\")\n",
+    "    else:\n",
+    "        print(i, \"not divisible 4\")\n",
+    "        \n",
+    "    if i%2 == 0 and i%4 == 0:\n",
+    "        print(i, \"divisible by 2 and 4\")\n",
+    "    else:\n",
+    "        print(i, \"not divisible 2 and 4\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example of cumulative sum using for loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i =  0 i+1 =  1 num =  [1] sum =  1\n",
+      "i =  1 i+1 =  2 num =  [1, 2] sum =  3\n",
+      "i =  2 i+1 =  3 num =  [1, 2, 3] sum =  6\n",
+      "i =  3 i+1 =  4 num =  [1, 2, 3, 4] sum =  10\n",
+      "i =  4 i+1 =  5 num =  [1, 2, 3, 4, 5] sum =  15\n",
+      "[1, 3, 6, 10, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4,5]\n",
+    "sum_list = []\n",
+    "\n",
+    "for i in range(len(nums)):\n",
+    "    print(\"i = \", i,  \"i+1 = \", i+1, \"num = \", nums[:i+1], \"sum = \", sum(nums[:i+1]))\n",
+    "    \n",
+    "    sum_list.append(sum(nums[:i+1]))\n",
+    "\n",
+    "print(sum_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,10 +449,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1[.]1[.]1[.]1\n",
+      "255[.]100[.]50[.]0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def defangIPaddr(address):\n",
+    "    \"\"\"\n",
+    "    :type address: str\n",
+    "    :rtype: str\n",
+    "    \"\"\"\n",
+    "    return address.replace('.', '[.]')\n",
+    "\n",
+    "example_1 = defangIPaddr(\"1.1.1.1\")\n",
+    "print(example_1)\n",
+    "\n",
+    "example_2 = defangIPaddr(\"255.100.50.0\")\n",
+    "print(example_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,10 +506,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Goal\n",
+      "Gooooal\n",
+      "alGalooG\n"
+     ]
+    }
+   ],
+   "source": [
+    "def interpret(command):\n",
+    "    \"\"\"\n",
+    "    :type command: str\n",
+    "    :rtype: str\n",
+    "    \"\"\"\n",
+    "    command = command.replace('()', 'o')\n",
+    "    command = command.replace('(al)', 'al')\n",
+    "\n",
+    "    return command\n",
+    "\n",
+    "example_1 = interpret(\"G()(al)\")\n",
+    "print(example_1)\n",
+    "\n",
+    "example_2 = interpret(\"G()()()()(al)\")\n",
+    "print(example_2)\n",
+    "\n",
+    "example_3 = interpret(\"(al)G(al)()()G\")\n",
+    "print(example_3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -216,17 +568,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def arrayStringsAreEqual(word1, word2):\n",
+    "    \n",
+    "#     print(\"\".join(word1))\n",
+    "#     print(\"\".join(word2))\n",
+    "\n",
+    "    return \"\".join(word1) == \"\".join(word2)\n",
+    "\n",
+    "example_1 = arrayStringsAreEqual([\"ab\", \"c\"], [\"a\", \"bc\"])\n",
+    "print(example_1)\n",
+    "\n",
+    "example_2 = arrayStringsAreEqual([\"a\", \"cb\"], [\"ab\", \"c\"])\n",
+    "print(example_2)\n",
+    "\n",
+    "example_3 = arrayStringsAreEqual( [\"abc\", \"d\", \"defg\"], [\"abcddefg\"])\n",
+    "print(example_3)"
+   ]
   }
  ],
  "metadata": {
